# arcanaxion.github.io

./: .gitignore  README.md  archives.html  authors.html  categories.html  pelicanconf.py  placeholder.html  pyproject.toml  tags.html
Pelican-StartBootstrap-Agency/static/css/: agency.css
Pelican-StartBootstrap-Agency/static/js/: contact_me.js
Pelican-StartBootstrap-Agency/static/mail/: contact_me.php
Pelican-StartBootstrap-Agency/templates/: about.html  contact.html  footer.html  index.html  modals.html  nav.html  services.html
author/: zaccheus-sia.html
content/: project-1.rst
content/extra/: CNAME
