[tool.poetry]
name = "arcanaxion.github.io"
version = "0.1.0"
description = ""
authors = ["Zaccheus Sia"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.7.2"}
black = "^22.3.0"
ghp-import = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
